--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/600.css';
 @import '@fontsource/roboto/700.css';
+@import '@radix-ui/themes/styles.css';
 @import 'tailwindcss';
 
 @theme {
